--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>A brief paragraph about you and what kind of company you want to work for.</p>
+					<p>Passionate and motivated individual with a keen interest in leveraging data-driven insights to solve complex problems and drive business growth. Equipped with practical experience and skills in data analytics, process automation, and business intelligence gained through hands-on projects and virtual internships. Proficient in data preparation, statistical analysis, predictive modeling, and visualization techniques. Excellent problem-solving and critical thinking abilities and strong communication and collaboration skills. Eager to contribute to dynamic teams and make meaningful contributions in roles such as data analyst, data scientist, data engineer, business analyst, and related positions.</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>JOB TITLE</h3>
+                    <h3>Intern</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            Alteryx | Jan 2024 - Mar 2024
                     </p>
                     <p>
-                            Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+                             
                     </p>
 
-					
+
                     <ul>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
+                            <li>Data Analysis</li>
+                            <li>Data Preparation</li>
+                            <li>Building Workflows</li>
                     </ul>
 				</section>
 			</article>
